# DataCenter-OS-Simulator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.bat
include/: deadlock.hpp  job.hpp  logger.hpp  resource_manager.hpp  scheduler.hpp
include/gui/: mainwindow.h
src/: deadlock.cpp  job.cpp  logger.cpp  main.cpp  resource_manager.cpp  scheduler.cpp
src/gui/: main_gui.cpp  mainwindow.cpp
